# segmentation_openvino_test

./: 1.cpp  CMakeLists.txt  README.md  afford_demo.cpp  components_20220427.xml  seg_model.cpp  seg_model.h
